# guts

pkg/: DESCRIPTION  NAMESPACE  aclocal.m4  configure  configure.ac
pkg/GUTS/: DESCRIPTION  NAMESPACE
pkg/GUTS/R/: GUTS.R  RcppExports.R
pkg/GUTS/data/: diazinon.rda
pkg/GUTS/inst/extdata/: vignetteGUTS-Proper-MCMCresults.Rdata  vignetteGUTS-Proper-forecast.Rdata
pkg/GUTS/man/: GUTS-package.Rd  GUTS.Rd  diazinon.Rd
pkg/GUTS/src/: GUTS_init.c  RcppExports.cpp  guts_engine.cpp  init.c
pkg/GUTS/vignettes/: GUTS-proper.Rmd  GUTS-proper.html  ringTest.Rmd  ringTest.html
pkg/R/: GUTS.R  RcppExports.R  zzz.R
pkg/SVMisc/: DESCRIPTION
pkg/SVMisc/R/: sv_cor_prob_matrix.R  sv_cs_nagel.R  sv_export_to_SPSS.R  sv_get_levels.R  sv_make_factor.R  sv_make_numeric.R  sv_relevel.R
pkg/SVMisc/man/: SVMisc-package.Rd  sv_cor_prob_matrix.Rd  sv_cs_nagel.Rd  sv_export_to_SPSS.Rd  sv_get_levels.Rd  sv_make_factor.Rd  sv_make_numeric.Rd  sv_relevel.Rd
pkg/autom4te.cache/: output.1  requests  traces.0  traces.1
pkg/data/: GUTSdiazinon.RData  diazinon.RData  diazinon.rda
pkg/inst/doc/: guts.index.html
pkg/man/: GUTS-class.Rd  GUTS-package.Rd  GUTS.Rd  GUTSdiazinon.Rd  Rcpp_GUTS-class.Rd  diazinon.Rd
pkg/src/: GUTS.cpp  GUTS.h  GUTS_Rcpp.cpp  GUTS_Rcpp.h  GUTS_calcLoglikelihood.cpp  GUTS_calcSample.cpp  GUTS_calcSurvivalProbabilities.cpp  Makevars.in  Makevars.win  RcppExports.cpp  guts_calc_loglikelihood.cpp  guts_engine.cpp
pkg/vignettes/: GUTS-Documentation.Rnw
www/: index.php  styles.css
www/files/: GUTS_0.9.5.tgz
